--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
   box-sizing: border-box;
 }
 .attribution {
-    color: white;
+  color: white;
   font-size: 11px;
   text-align: center;
   margin-top: 20px;
 }
 .attribution a {
-  color:  hsl(215, 51%, 70%);;
+  color: hsl(215, 51%, 70%);
 }
 
 body {
@@ -30,10 +30,37 @@ main {
   font-family: "Outfit";
   box-shadow: 10px 10px 60px hsl(216, 79%, 4%);
 }
-.main-image{
-    height: 50%;
-    width: 100%;
+
+.main-image {
+  height: 50%;
+  width: 100%;
+  position: relative;
 }
+
+.image-view {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: hsla(178, 100%, 50%, 0.5);
+  width: 100%;
+  height: 100%;
+  display: none;
+  border-radius: 5px;
+}
+
+.image-view img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.main-image:hover .image-view {
+  display: block;
+  cursor: pointer;
+}
+
 .equilibrium {
   height: 100%;
   width: 100%;
@@ -45,10 +72,9 @@ main {
   background-color: hsl(178, 100%, 50%);
 }
 
-.view{
-    position: absolute;
-    background-color: hsl(178, 100%, 50%);
-
+.view {
+  position: absolute;
+  background-color: hsl(178, 100%, 50%);
 }
 
 h1 {
